--- a/index.html
+++ b/index.html
@@ -23,21 +23,37 @@
 <body>
     <div class="container">
         <div class="input-data-wrapper">
+            <div class="title">
+                <h1>Lueur D'Espoir</h1>
+                <hr>
+            </div>
             <div class="input-data">
                 <div class="mb-3 inputs">
-                    <label for="" class="form-label">Moule</label>
+                    <div class="label-div">
+                        <label for="" class="form-label">Moule</label>
+                        <hr>
+                    </div>       
                     <input placeholder="$" class="form-input" type="number" id="moule">
                 </div>
                 <div class="mb-3 inputs">
-                    <label for="" class="form-label">Cire</label>
-                    <input placeholder="LBS" class="form-input" type="number" id="cire">
+                    <div class="label-div">
+                        <label for="" class="form-label">Cire</label>
+                        <hr>
+                    </div>
+                    <input placeholder="lbs" class="form-input" type="number" id="cire">
                 </div>
                 <div class="mb-3 inputs">
-                    <label for="" class="form-label">Mèche</label>
-                    <input placeholder="NB" class="form-input" type="number" id="meche">
+                    <div class="label-div">
+                        <label for="" class="form-label">Mèches</label>
+                        <hr>
+                    </div>
+                    <input placeholder="nbs" class="form-input" type="number" id="meche">
                 </div>
                 <div class="mb-3 inputs">
-                    <label for="" class="form-label">Huile</label>
+                    <div class="label-div">
+                        <label for="" class="form-label">Huile</label>
+                        <hr>
+                    </div>
                     <input placeholder="$" class="form-input" type="number" id="huile">
                 </div>
             </div>
