--- a/index.html
+++ b/index.html
@@ -44,18 +44,19 @@
                 </div>
                 <div class="mb-3 inputs">
                     <div class="label-div">
+                        <label for="" class="form-label">Huile</label>
+                        <hr>
+                    </div>
+                    <input placeholder="ml" class="form-input" type="number" id="huile">
+                </div>
+                <div class="mb-3 inputs">
+                    <div class="label-div">
                         <label for="" class="form-label">Mèches</label>
                         <hr>
                     </div>
                     <input placeholder="nbs" class="form-input" type="number" id="meche">
                 </div>
-                <div class="mb-3 inputs">
-                    <div class="label-div">
-                        <label for="" class="form-label">Huile</label>
-                        <hr>
-                    </div>
-                    <input placeholder="$" class="form-input" type="number" id="huile">
-                </div>
+                
             </div>
 
             <div class="result">
