Upload meches normal

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 <body>
     <div class="container">
         <div class="input-data-wrapper">
+            <div class="error-message">
+                <h1>Ne peux pas avoir deux types de mèches <br><br>
+                Je t'aime</h1>
+            </div>
             <div class="title">
                 <h1>Lueur D'Espoir</h1>
                 <hr>
@@ -51,10 +55,17 @@
                 </div>
                 <div class="mb-3 inputs">
                     <div class="label-div">
-                        <label for="" class="form-label">Mèches</label>
+                        <label for="" class="form-label">Mèches Bois</label>
                         <hr>
                     </div>
                     <input placeholder="nbs" class="form-input" type="number" id="meche">
+                </div>
+                <div class="mb-3 inputs">
+                    <div class="label-div">
+                        <label for="" class="form-label">Mèches Normal</label>
+                        <hr>
+                    </div>
+                    <input placeholder="nbs" class="form-input" type="number" id="meche-normal">
                 </div>
                 
             </div>
