--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <div class="container">
         <div class="input-data-wrapper">
             <div class="error-message">
-                <h1>Ne peux pas avoir deux types de mèches <br><br>
-                Je t'aime</h1>
+                <img src="images/koko.jpeg" alt="">
+                <h1>Je t'aime <i class="fa fa-heart"></i></h1>
             </div>
             <div class="title">
                 <h1>Lueur D'Espoir</h1>
@@ -72,8 +72,9 @@
 
             <div class="result">
                 <h1>Total</h1>
-                <h1 id="result"></h1>
+                <h1 id="result">0.00$</h1>
             </div>
+            <button class="btn btn-outline-dark" type="button">Restart</button>
         </div>
 
         
